--- a/css/style.css
+++ b/css/style.css
@@ -192,8 +192,8 @@ h2 {
     opacity: 1;
 }
 
-.project-links a,
-.project-links a:visited {
+a,
+a:visited {
     color: var(--text-primary);
     text-decoration: none;
 }
